--- a/Reports.Rmd
+++ b/Reports.Rmd
@@ -11,15 +11,21 @@ fontsize: 12pt
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(knitr)
-opts_chunk$set(tidy.opts=list(width.cutoff=50),tidy=TRUE)
 library(ggplot2)
 library(tidyverse)
+```
+```{r, echo = F}
+opts_chunk$set(tidy.opts=list(width.cutoff=50),tidy=TRUE)
 ```
 
 # Fall 2021 Data Science Intern Challenge
 
+This is an intern challenge project for Shopify Data Science Intern. I hope my approach could help those who need it. 
+
 ## Exploratory Data Analysis
-We first need to check the dataset that matches the meta data description. There are 100 unique sneaker shops and the time window is from 2017-03-01 to 2017-03-30. The naive AOV is calculated by the mean of order amount, which is 3145.138.
+
+We first need to check the dataset that matches the meta data description. There are 100 unique sneaker shops and the time window is from 2017-03-01 to 2017-03-30. The naive AOV is calculated by the mean of order amount, which is 3145.138. This number is nodoubtly too large for sneaker stores. We could assume there are outliers or influential points exist in the dataset.
+
 ```{r EDA, echo = FALSE}
 shop_data <- read.csv("./Intern_dataset.csv")
 shop_data$created_day <- as.Date(shop_data$created_at, formax = "%Y-%m-%d")
@@ -30,11 +36,12 @@ paste0("There are ", length(unique(shop_data$shop_id)), " unique shops in datase
 paste0("The time window is from ", min(shop_data$created_day), " to ", max(shop_data$created_day))
 paste0("The naive AOV which calculated by the average of order amount is ", mean(shop_data$order_amount))
 ```
-Next, our parameter of interest would be the order_amount. We want to explore the correlation between the parameter of interest and other covariates.
+
+Next, our parameter of interest would be the order_amount. We want to explore the correlation between the parameter of interest and other covariates to find anything that is unusual.
 
 For the relations between order_amount and payment method. We could see there are outliers for all payment methods. But there is a significantly shifted outlier in credit_card.
 
-For the relations between order_amount and the time window. We could see most of the outliers are randomly distributed. However for one outlier, which is also a significantly shifted ourlier, there is a trivial pattern. The order with the same amount happened every 2-4 days. Which could solidify our conclusion that this is a wholesale store later.
+For the relations between order_amount and the time window. We could see most of the outliers are randomly distributed. However for one outlier, which is also a significantly shifted ourlier, there is a trivial pattern. The order with the same amount happened every 2-4 days. We need to keep this pattern in mind, it could solidify our assumption that this is a wholesale store later.
 
 ```{r, echo=FALSE, figures-side, fig.show="hold", out.width="50%"}
 ggplot(shop_data, aes(x = payment_method, y=order_amount, colour = payment_method)) + geom_boxplot() + theme(text = element_text(size=20))
@@ -52,11 +59,11 @@ ggplot(data = ro_data, aes(x = total_items, y = order_amount, group = total_item
 
 ## Report metrics for different subgroups
 
-From the previous analysis we could conclude there are three different types of orders in our datasets. The normal orders (with decent price and amount of items), the orders with a huge amount of items (descent price) and the orders with much higher price from luxury stores. There would be some potential problems if we calculate AOV across those three groups.
+From the previous analysis we could assume there are three different types of orders in our datasets. The normal orders (with decent price and amount of items), the orders with a huge amount of items (descent price) and the orders with much higher price from luxury stores. Since the last two groups have much more order value than the normal orders. There would be some potential problems if we calculate AOV across those three groups. However, those comments are still assumptions since those abnormal orders could also be fraudulent orders.
 
 To solve this issue we could use two approaches.
 If we still want to report AOV. We could report the AOV for three different subgroups, the normal sneaker store, the luxury sneaker store and the wholesale store with a huge amount of items per order.
-We could also report the per-item value for those three different subgroups. Which gave us a better vision of their price policy.
+We could also report the per-item value for those three different subgroups. Which gave us a better vision of their price strategy.
 
 |   |Normal Store|Wholesale Store|Luxury Store|
 |---|---|---|---|
